# effective-haskell

./: shell.nix
Chapter1/: Conlitionals.hs  Exercises.hs  FizzBuzz.hs  Main  Main.hi  Main.hs  OperatorExample.hs
Chapter10/: Chapter10.hs  DirectoryTree.hs  Metrics.hs  ReadWriteIORef.hs
Chapter2/: Chapter2.hs  Exercises.hs  Fibs.hs  FoldExamples.hs  InfiniteFind.hs
Chapter3/: Exercises.hs  SumBiggest.hs
Chapter4/: Calculator.hs  Exercises.hs  Peno.hs
Chapter5/import-demo/: import-demo.cabal
Chapter5/import-demo/app/: Main.hs
Chapter5/import-demo/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
Chapter5/learn-cabal/: learn-cabal.cabal
Chapter5/module-examples/: LICENSE  module-examples.cabal
Chapter5/module-examples/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
Chapter5/module-examples/dist-newstyle/packagedb/ghc-9.6.6/: module-examples-0.1.0.0-inplace.conf  package.cache
Chapter5/module-examples/src/: ModuleDemo.hs
Chapter5/module-examples/src/HaskellBook/: Examples.hs
Chapter5/module-examples/src/HaskellBook/Examples/: SortedList.hs  UserInfo.hs
Chapter5/module-examples/src/HaskellBook/Examples/Introduction/: CreatingModules.hs
Chapter6/: Chapter6.hs  DefaultSignaturesDemo.hs  HKTDemo.hs  Nullable.hs  OrdExample.hs  Selector.hs
Chapter7/: Exercises.hs  poem.txt
Chapter8/Pager/: LICENSE  hcat.cabal
Chapter8/Pager/app/: Main.hs
Chapter8/Pager/src/: HCat.hs
Chapter9/: Chapter9.hs
(+10 files in other folders)
