cabal-version:      3.0
name:               module-examples
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Cully-Curwen
maintainer:         c.t.g.curwen@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
                    , HaskellBook.Examples.Introduction.CreatingModules
                    , HaskellBook.Examples.SortedList
                    , HaskellBook.Examples.UserInfo
                    , ModuleDemo
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.2.1
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions: RecordWildCards
